unpackaged/main/default/objects/Corporate_Brand_Name__c/Corporate_Brand_Name__c.object-meta.xml
<CustomObject>
    <label>Corporate Brand Name</label>
    <nameField>
        <label>Corporate Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Brand Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>