unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/Agency_Group__c.field-meta.xml
<CustomField>
    <fullName>Agency_Group__c</fullName>
    <inlineHelpText>Mid-level agency group association</inlineHelpText>
    <label>Brand Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Agency_Holding_Company__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>24/7 Media</fullName>
            </value>
            <value>
                <fullName>9ine Sports &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>A. Eicoff &amp; Co</fullName>
            </value>
            <value>
                <fullName>Acceleration</fullName>
            </value>
            <value>
                <fullName>AKQA</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>BDG Architecture + Design</fullName>
            </value>
            <value>
                <fullName>Blue State Digital</fullName>
            </value>
            <value>
                <fullName>B to D Group</fullName>
            </value>
            <value>
                <fullName>Buchanan Communications</fullName>
            </value>
            <value>
                <fullName>Clarion Communications</fullName>
            </value>
            <value>
                <fullName>Clover Park Group</fullName>
            </value>
            <value>
                <fullName>Coley Prter Bell</fullName>
            </value>
            <value>
                <fullName>Dewey Square Group</fullName>
            </value>
            <value>
                <fullName>Dialogue</fullName>
            </value>
            <value>
                <fullName>Digit</fullName>
            </value>
            <value>
                <fullName>Dmollan/Headcount</fullName>
            </value>
            <value>
                <fullName>Dovetail</fullName>
            </value>
            <value>
                <fullName>EWA</fullName>
            </value>
            <value>
                <fullName>F.Biz</fullName>
            </value>
            <value>
                <fullName>GCI Health</fullName>
            </value>
            <value>
                <fullName>GHG</fullName>
            </value>
            <value>
                <fullName>Grey Group</fullName>
            </value>
            <value>
                <fullName>Group M</fullName>
            </value>
            <value>
                <fullName>Hering Schuppener</fullName>
            </value>
            <value>
                <fullName>Hill + Knowlton Strategies</fullName>
            </value>
            <value>
                <fullName>Hogarth Worldwide</fullName>
            </value>
            <value>
                <fullName>JWT</fullName>
            </value>
            <value>
                <fullName>Kantar</fullName>
            </value>
            <value>
                <fullName>Mando</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>