unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/Agency_Holding_Company__c.field-meta.xml
<CustomField>
    <fullName>Agency_Holding_Company__c</fullName>
    <inlineHelpText>Top level agency holding company association</inlineHelpText>
    <label>Holding Company</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Classificaiton_del__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Dentsu</fullName>
            </value>
            <value>
                <fullName>Havas</fullName>
            </value>
            <value>
                <fullName>Interpublic</fullName>
            </value>
            <value>
                <fullName>Omnicom Group</fullName>
            </value>
            <value>
                <fullName>Publicis Group</fullName>
            </value>
            <value>
                <fullName>WPP</fullName>
            </value>
            <value>
                <fullName>Diversified Agency Services (DAS)</fullName>
            </value>
            <value>
                <fullName>Label (Commercial)</fullName>
            </value>
            <value>
                <fullName>Spotify</fullName>
            </value>
            <value>
                <fullName>MDC Partners</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Independent Agency</fullName>
            </value>
            <value>
                <fullName>Warner Music</fullName>
            </value>
            <value>
                <fullName>Universal Music</fullName>
            </value>
            <value>
                <fullName>Sony Music</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Independent Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>