unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/Brand_Description__c.field-meta.xml
<CustomField>
    <fullName>Brand_Description__c</fullName>
    <label>Brand Description</label>
    <type>TextArea</type>
</CustomField>