unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/Brand_Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Brand_Owner_Country__c</fullName>
    <label>Brand Owner Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>