unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/Brand_Type__c.field-meta.xml
<CustomField>
    <fullName>Brand_Type__c</fullName>
    <label>Brand Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
                <default>true</default>
                <label>Global</label>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>