unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/Classificaiton_del__c.field-meta.xml
<CustomField>
    <fullName>Classificaiton_del__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Global_Customer_Segment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Big 6 Agency Holding Companies</fullName>
            </value>
            <value>
                <fullName>Independent Agency</fullName>
            </value>
            <value>
                <fullName>Verified Advertiser</fullName>
            </value>
            <value>
                <fullName>Unverified Advertiser</fullName>
                <default>true</default>
                <label>Unverified Advertiser</label>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Major Label</fullName>
            </value>
            <value>
                <fullName>Independent Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>