unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/Duplicate_Checker__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Checker__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This field does not allow duplicates. A workflow copies the brand name to this field. If the brand name is not unique an error will be thrown...</inlineHelpText>
    <label>Duplicate Checker</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>