unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/Global_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Global_Customer_Segment__c</fullName>
    <label>Demand Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertiser</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>