unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/Is_global_brand__c.field-meta.xml
<CustomField>
    <fullName>Is_global_brand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is global brand</label>
    <type>Checkbox</type>
</CustomField>