unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/Sum_Closed_opp_to_be_invoiced__c.field-meta.xml
<CustomField>
    <fullName>Sum_Closed_opp_to_be_invoiced__c</fullName>
    <label>Σ Closed, To be Invoiced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>