unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/Sum_Invoice_Overdue_amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_Invoice_Overdue_amount__c</fullName>
    <label>Σ Inv. Overdue amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>