unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/Sum_Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_Invoiced_Amount__c</fullName>
    <label>Σ Invoiced Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>