unpackaged/main/default/objects/Corporate_Brand_Name__c/fields/sum_Invoiced_remaining_amount__c.field-meta.xml
<CustomField>
    <fullName>sum_Invoiced_remaining_amount__c</fullName>
    <label>Σ Inv. Remaining amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>